feat: permitir compras